--- a/GrilleCipher/GrilleWindow.xaml
+++ b/GrilleCipher/GrilleWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GrilleCipher"
         mc:Ignorable="d"
-        Title="Grille cipher" Height="350" Width="525">
+        Title="Grille cipher" Height="400" Width="525">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -22,21 +22,33 @@
             <ColumnDefinition />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        <CheckBox Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="0" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="0" Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="1" Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="2" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="2" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="2" Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="3" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <CheckBox Grid.Row="3" Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+        <CheckBox Grid.Row="0" Grid.Column="1" IsChecked="{Binding Model.Pattern[0][0]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="0" Grid.Column="2" IsChecked="{Binding Model.Pattern[0][1]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="0" Grid.Column="3" IsChecked="{Binding Model.Pattern[0][2]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="0" Grid.Column="4" IsChecked="{Binding Model.Pattern[0][3]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="1" Grid.Column="1" IsChecked="{Binding Model.Pattern[1][0]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="1" Grid.Column="2" IsChecked="{Binding Model.Pattern[1][1]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="1" Grid.Column="3" IsChecked="{Binding Model.Pattern[1][2]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="1" Grid.Column="4" IsChecked="{Binding Model.Pattern[1][3]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="2" Grid.Column="1" IsChecked="{Binding Model.Pattern[2][0]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="2" Grid.Column="2" IsChecked="{Binding Model.Pattern[2][1]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="2" Grid.Column="3" IsChecked="{Binding Model.Pattern[2][2]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="2" Grid.Column="4" IsChecked="{Binding Model.Pattern[2][3]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="3" Grid.Column="1" IsChecked="{Binding Model.Pattern[3][0]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="3" Grid.Column="2" IsChecked="{Binding Model.Pattern[3][1]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="3" Grid.Column="3" IsChecked="{Binding Model.Pattern[3][2]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox Grid.Row="3" Grid.Column="4" IsChecked="{Binding Model.Pattern[3][3]}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+        <Label Grid.Row="4" Grid.ColumnSpan="3" Margin="10,0,0,0" Content="Output" Height="30" VerticalAlignment="Top" />
+        <TextBlock Grid.Row="4" Grid.ColumnSpan="3" Margin="10,40,0,0" Height="30" VerticalAlignment="Top" />
+        <TextBlock Grid.Row="4" Grid.ColumnSpan="3" Margin="10,0,10,10" Height="120" VerticalAlignment="Bottom" />
+        <Label Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" Margin="10,0,0,0" Content="Decryption" Height="30" VerticalAlignment="Top" />
+        <TextBlock Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalAlignment="Top" Height="30" Margin="10,40,10,0" />
+        <Label Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" Margin="10,0,10,70" Content="Input" Height="30" VerticalAlignment="Bottom" />
+        <TextBox Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="3" VerticalAlignment="Bottom" Height="25" Margin="10,0,10,40" />
+        <Button Grid.Row="4" Grid.Column="3" Command="{Binding DoEncrypt}" Grid.ColumnSpan="2" Content="Encrypt" Height="30" Margin="10,0,10,5" VerticalAlignment="Bottom" />
+        <Button Grid.Row="4" Grid.Column="5" Command="{Binding DoDecrypt}" Content="Decrypt" Height="30" Margin="10,0,10,5" VerticalAlignment="Bottom" />
+
     </Grid>
 </Window>
